# src/Controllers/Api/VestController.php
@@ -2,10 +2,13 @@
 
 namespace App\Controllers\Api;
 
+use App\Api\Request\VestImportRequest;
 use App\Core\Middleware\ApiToken;
 use App\Exceptions\AuthHeaderException;
 use App\GameModels\Vest;
 use App\Models\Arena;
+use App\Models\ArenaSystem;
+use App\Models\DataObjects\Import\SystemImportDto;
 use App\Models\System;
 use App\Models\SystemType;
 use Lsr\Core\Controllers\ApiController;
@@ -13,11 +16,12 @@ use Lsr\Core\Requests\Dto\ErrorResponse;
 use Lsr\Core\Requests\Dto\SuccessResponse;
 use Lsr\Core\Requests\Enums\ErrorType;
 use Lsr\Core\Requests\Request;
+use Lsr\Core\Requests\Validation\RequestValidationMapper;
 use Lsr\Interfaces\RequestInterface;
-use Lsr\LaserLiga\Enums\VestStatus;
 use Lsr\Orm\Exceptions\ValidationException;
 use OpenApi\Attributes as OA;
 use Psr\Http\Message\ResponseInterface;
+use Symfony\Component\Serializer\Exception\ExceptionInterface;
 
 class VestController extends ApiController
 {
@@ -43,44 +47,9 @@ class VestController extends ApiController
 		summary    : 'Import vest information.',
 		requestBody: new OA\RequestBody(
 			required: true,
-			content : new OA\JsonContent(
-				          required  : ['vest'],
-				          properties: [
-					                      new OA\Property(
-						                      property: 'vest',
-						                      type    : "array",
-						                      items   : new OA\Items(
-							                                required  : ['vestNum', 'system', 'status'],
-							                                properties: [
-								                                            new OA\Property(
-									                                            property: 'vestNum',
-									                                            type    : 'string',
-									                                            example : '1',
-								                                            ),
-								                                            new OA\Property(
-									                                            property: 'system',
-									                                            type    : 'string',
-									                                            example : 'evo5',
-								                                            ),
-								                                            new OA\Property(
-									                                            property: 'status',
-									                                            ref     : '#/components/schemas/VestStatus'
-								                                            ),
-								                                            new OA\Property(
-									                                            property: 'info',
-									                                            type    : 'string',
-									                                            example : 'Zbraň vynechává',
-									                                            nullable: true,
-								                                            ),
-							                                            ],
-							                                type      : 'object',
-						                                )
-					                      ),
-				                      ],
-				          type      : 'object',
-			          ),
+			content : new OA\JsonContent(ref: '#/components/schemas/VestImportRequest'),
 		),
-		tags       : ['Vests']
+		tags       : ['Vests', 'Import']
 	)]
 	#[OA\Response(
 		response   : 200,
@@ -106,67 +75,92 @@ class VestController extends ApiController
 		description: "Server error during save operation",
 		content    : new OA\JsonContent(ref: "#/components/schemas/ErrorResponse")
 	)]
-	public function syncVests(Request $request): ResponseInterface {
+	public function syncVests(RequestValidationMapper $mapper, Request $request): ResponseInterface {
 		$vests = Vest::getForArena($this->arena);
 
-		/** @var array<string, Vest> $oldVests */
+		/** @var array<string,array<string, Vest>> $oldVests */
 		$oldVests = [];
 		$newVests = [];
 
 		// Create an associative array of vests
 		foreach ($vests as $vest) {
-			$oldVests[$vest->vestNum] = $vest;
+			$oldVests[$vest->system->type->value] ??= [];
+			$oldVests[$vest->system->type->value][$vest->vestNum] = $vest;
 		}
 
-		$vests = $request->getPost('vest', []);
-		if (!is_array($vests)) {
-			return $this->respond(new ErrorResponse('"vest" is not an array', ErrorType::VALIDATION), 400);
+		try {
+			$requestData = $mapper->setRequest($request)
+			                      ->mapBodyToObject(VestImportRequest::class);
+		} catch (\Lsr\ObjectValidation\Exceptions\ValidationException $e) {
+			return $this->respond(
+				new ErrorResponse(
+					           'Validation error',
+					           ErrorType::VALIDATION,
+					detail   : $e->getMessage(),
+					exception: $e,
+				),
+				400
+			);
+		} catch (ExceptionInterface $e) {
+			return $this->respond(
+				new ErrorResponse(
+					           'Request parsing exception',
+					           ErrorType::VALIDATION,
+					exception: $e,
+				),
+				400
+			);
 		}
+		$vests = $requestData->vest;
 		if (empty($vests)) {
 			return $this->respond(new ErrorResponse('"vest" array cannot be empty', ErrorType::VALIDATION), 400);
 		}
 
 		$errors = [];
+		/** @var array<string, System> $arenaSystems */
+		$arenaSystems = [];
 
-		/** @var array{vestNum:string,system:string,status:string,info:string|null}|mixed $vestData */
 		foreach ($vests as $key => $vestData) {
-			// Validate data
-			if (!is_array($vestData)) {
-				$errors[] = 'Vest [' . $key . '] is not a valid object.';
-				continue;
-			}
-			if (empty($vestData['vestNum'])) {
-				$errors[] = 'Vest [' . $key . '].vestNum cannot be empty.';
-				continue;
-			}
-			if (empty($vestData['system'])) {
-				$errors[] = 'Vest [' . $key . '].system cannot be empty.';
-				continue;
-			}
-			$system = SystemType::tryFrom($vestData['system']);
-			if ($system === null) {
-				$errors[] = 'Vest [' . $key . '].system is invalid.';
-				continue;
-			}
-			$systems = System::getForType($system, $this->arena);
-			if (count($systems) === 0) {
-				$errors[] = 'Vest [' . $key . '].system is not supported in this arena.';
-				continue;
-			}
-			$system = first($systems);
+			// Find system
+			$systemType = $vestData->system instanceof SystemType ?
+				$vestData->system
+				: $vestData->system->type;
 
-			if (empty($vestData['status'])) {
-				$errors[] = 'Vest [' . $key . '].status cannot be empty.';
-				continue;
+			if (isset($arenaSystems[$systemType->value])) {
+				$system = $arenaSystems[$systemType->value];
 			}
-			if (($status = VestStatus::tryFrom($vestData['status'])) === null) {
-				$errors[] = 'Vest [' . $key . '].status is invalid.';
-				continue;
+			else {
+				$systems = System::getForType($systemType, $this->arena);
+
+				if (empty($systems)) {
+					// Get system without arena
+					$systems = System::getForType($systemType);
+					if (empty($systems)) {
+						$errors[] = 'System [' . $key . '] not found.';
+						continue;
+					}
+					$system = first($systems);
+					// Add system to arena
+					$arenaSystem = new ArenaSystem();
+					$arenaSystem->arena = $this->arena;
+					$arenaSystem->system = $system;
+					if ($vestData->system instanceof SystemImportDto) {
+						$arenaSystem->active = $vestData->system->active;
+						$arenaSystem->default = $vestData->system->default;
+					}
+					$arenaSystem->save();
+				}
+				else {
+					$system = first($systems);
+				}
+
+				// Remember arena system for arena
+				$arenaSystems[$systemType->value] = $system;
 			}
 
-			if (isset($oldVests[$vestData['vestNum']])) {
-				$vest = $oldVests[$vestData['vestNum']];
-				unset($oldVests[$vestData['vestNum']]);
+			if (isset($oldVests[$systemType->value][$vestData->vestNum])) {
+				$vest = $oldVests[$systemType->value][$vestData->vestNum];
+				unset($oldVests[$systemType->value][$vestData->vestNum]);
 			}
 			else {
 				$vest = new Vest();
@@ -174,16 +168,19 @@ class VestController extends ApiController
 
 			// Update vest data
 			$vest->arena = $this->arena;
-			$vest->vestNum = $vestData['vestNum'];
+			$vest->vestNum = $vestData->vestNum;
 			$vest->system = $system;
-			$vest->status = $status;
-			$vest->info = empty($vestData['info']) ? null : ((string)$vestData['info']);
+			$vest->status = $vestData->status;
+			$vest->info = empty($vestData->info) ? null : ((string)$vestData->info);
 
 			$newVests[] = $vest;
 		}
 
 		if (count($errors) > 0) {
-			return $this->respond(new ErrorResponse('Validation error', ErrorType::VALIDATION, values: ['errors' => $errors]), 400);
+			return $this->respond(
+				new ErrorResponse('Validation error', ErrorType::VALIDATION, values: ['errors' => $errors]),
+				400
+			);
 		}
 
 		// Save all new and updated vests
@@ -193,16 +190,19 @@ class VestController extends ApiController
 			}
 		}
 		// Delete old vests that were not included in the post data
-		foreach ($oldVests as $vest) {
-			if (!$vest->delete()) {
-				$errors[] = 'Failed to delete old vest - ' . $vest->vestNum;
+		foreach ($oldVests as $vestsSystem) {
+			foreach ($vestsSystem as $vest) {
+				if (!$vest->delete()) {
+					$errors[] = 'Failed to delete old vest - ' . $vest->vestNum;
+				}
 			}
 		}
 
 		if (count($errors) > 0) {
-			return $this->respond(new ErrorResponse('Save error', ErrorType::DATABASE, values: ['errory' => $errors]), 500);
+			return $this->respond(new ErrorResponse('Save error', ErrorType::DATABASE, values: ['errory' => $errors]),
+			                      500);
 		}
-		return $this->respond(new SuccessResponse(values:['vests' => $newVests]));
+		return $this->respond(new SuccessResponse(values: ['vests' => $newVests]));
 	}
 
 	/**
