# src/Models/System.php
@@ -3,62 +3,70 @@ declare(strict_types=1);
 
 namespace App\Models;
 
-use Lsr\ObjectValidation\Attributes\IntRange;
+use Lsr\Db\DB;
+use Lsr\Orm\Attributes\Instantiate;
+use Lsr\Orm\Attributes\JsonExclude;
 use Lsr\Orm\Attributes\PrimaryKey;
-use Lsr\Orm\Attributes\Relations\ManyToOne;
+use Lsr\Orm\Attributes\Relations\OneToMany;
+use Lsr\Orm\ModelCollection;
+use OpenApi\Attributes as OA;
 use Stringable;
 
-#[PrimaryKey('id_system')]
+#[PrimaryKey('id_system'), OA\Schema]
 class System extends BaseModel implements Stringable
 {
 
 	public const string TABLE = 'systems';
 
-	public string $name;
-	#[ManyToOne]
-	public Arena $arena;
+	#[OA\Property]
+	public string     $name;
+	#[OA\Property]
 	public SystemType $type;
-	#[IntRange(1, 255)]
-	public int $columnCount = 15;
-	#[IntRange(1, 255)]
-	public int $rowCount = 15;
-	public bool $default = false;
-	public bool $active = true;
 
-	public static function getDefault(?Arena $arena = null,bool $cache = true) : ?System {
-		$query = self::query()->where('[default] = 1');
+	/** @var ModelCollection<ArenaSystem> */
+	#[OneToMany(class: ArenaSystem::class), Instantiate, JsonExclude]
+	public ModelCollection $arenas;
+
+	public static function getDefault(?Arena $arena = null, bool $cache = true): ?System {
+		$activeQuery = DB::select(ArenaSystem::TABLE, 'id_system')
+		                 ->where('[default] = 1');
 		if ($arena !== null) {
-			$query->where('id_arena = %i', $arena->id);
+			$activeQuery->where('id_arena = %i', $arena->id);
 		}
-		return $query->first($cache);
+		return self::query()->where('id_system IN %sql', $activeQuery)->first($cache);
 	}
 
 	/**
-	 * @param  bool  $cache
+	 * @param bool $cache
+	 *
 	 * @return System[]
 	 */
-	public static function getActive(?Arena $arena = null, bool $cache = true) : array {
-		$query = self::query()->where('active = 1');
+	public static function getActive(?Arena $arena = null, bool $cache = true): array {
+		$activeQuery = DB::select(ArenaSystem::TABLE, 'id_system')
+		                 ->where('[active] = 1');
 		if ($arena !== null) {
-			$query->where('id_arena = %i', $arena->id);
+			$activeQuery->where('id_arena = %i', $arena->id);
 		}
-		return $query->get($cache);
+		return self::query()->where('id_system IN %sql', $activeQuery)->get($cache);
 	}
 
 	/**
-	 * @param  SystemType  $type
-	 * @param  bool  $cache
+	 * @param SystemType $type
+	 * @param bool       $cache
+	 *
 	 * @return System[]
 	 */
-	public static function getForType(SystemType $type, ?Arena $arena = null, bool $cache = true) : array {
+	public static function getForType(SystemType $type, ?Arena $arena = null, bool $cache = true): array {
 		$query = self::query()->where('type = %s', $type->value);
 		if ($arena !== null) {
-			$query->where('id_arena = %i', $arena->id);
+			$activeQuery = DB::select(ArenaSystem::TABLE, 'id_system')
+			                 ->where('[id_arena] = %i', $arena->id);
+			$query->where('id_system IN %sql', $activeQuery);
 		}
 		return $query->get($cache);
 	}
 
-	public function __toString() : string {
+	public function __toString(): string {
 		return $this->type->value;
 	}
 }
